--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!--spring4jdbc-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>4.3.30.RELEASE</version>
+    </dependency>
+
     <!--spring4mvc-->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -88,6 +95,12 @@
       <version>2.0.6</version>
     </dependency>
 
+    <!--fillupload-->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
 
   </dependencies>
 
